Fixes to mobile layout and desktop layout ensuring proper spacing. Styling yet to come.

--- a/styles.css
+++ b/styles.css
@@ -5,29 +5,18 @@
 }
 
 body {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
   background: hsl(210, 46%, 95%);
   font-size: 13px;
   font-family: "Barlow Semi Condensed", serif;
+  margin: 10px;
 }
 
-/* Mobile Layout (375px) */
-@media (max-width: 375px) {
-  .container {
-    display: grid;
-    grid-template-columns: 1fr; /* Stack the cards vertically */
-    gap: 20px;
-    max-width: 100%;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  .card-one,
-  .card-two,
-  .card-three,
-  .card-four,
-  .card-five {
-    grid-column: span 1; /* Make each card take up 1 column */
-  }
+.portrait img {
+  border-radius: 50%;
+  border: 2px white solid;
 }
 
 /* Grid container and desktop layout (1440px)  */
@@ -35,7 +24,6 @@ body {
   .container {
     display: grid;
     grid-template-columns: repeat(4, 2fr);
-    gap: 20px;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -46,6 +34,8 @@ body {
 .card-one {
   background-color: hsl(263, 55%, 52%);
   background-image: url("./images/bg-pattern-quotation.svg");
+  background-position-x: 80%;
+  background-repeat: no-repeat;
   grid-column: span 2;
 }
 
@@ -70,7 +60,7 @@ body {
   grid-row: span 2;
 }
 
-/* Collective card styling and Mobile card styles (375px) */
+/* Collective card styling */
 .card-one,
 .card-two,
 .card-three,
@@ -78,13 +68,31 @@ body {
 .card-five {
   padding: 20px;
   border-radius: 10px;
+  margin: 10px;
+}
+
+/* Mobile Layout (375px) */
+@media (max-width: 375px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr; /* Stack the cards vertically */
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .card-one,
+  .card-two,
+  .card-three,
+  .card-four,
+  .card-five {
+    grid-column: span 1;
+  }
 }
 
 /* Default attribution styling that came with the project */
 .attribution {
   font-size: 11px;
   text-align: center;
-  margin-top: 10px;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
